--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,27 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&display=swap');
+
+*, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
+    font-family: 'Oswald', sans-serif;
+    width: 100%;
     max-width: 1440px;
-    height: 1200px;
+    margin: 0 auto;
+}
+
+button {
+    cursor: pointer;
+}
+
+.header > .container {
+    max-width: 1220px;
     width: 100%;
     margin: 0 auto;
+    height: 100vh;
 }
 
 .header {
@@ -16,19 +29,8 @@ body {
     min-height: 694px;
 }
 
-.header > .container {
-    max-width: 1220px;
-    width: 100%;
-    margin: 0 auto;
-    
-}
-
 .header-main {
-    /* display: flex; */
-    /* justify-content: space-between; */
     position: absolute;
-    max-width: 1220px;
-    width: 100%;
     z-index: 3;
     
 }
@@ -58,12 +60,23 @@ body {
     position: absolute;
 }
 
-.can {
+.can-desktop {
     position: absolute;
     z-index: 2;
     left: 558px;
     top: 141px;
+}
 
+.logo-mobile {
+    display: none;
+}
+
+.can-tablet {
+    display: none;
+}
+
+.can-mobile {
+    display: none;
 }
 
 .right-menu {
@@ -99,7 +112,7 @@ ul.right-menu li {
 
 .main-text {
     padding-top: 111px;
-    padding-left: 53px;
+    padding-left: 80px;
 }
 
 .main-text h1 {
@@ -119,7 +132,7 @@ ul.right-menu li {
     font-weight: 400;
     font-size: 20px;
     line-height: 20px;
-    color: #000000;
+    
 }
 
 .main-text button {
@@ -131,6 +144,7 @@ ul.right-menu li {
     background: #68B738;
     color: #FFFFFF;
     padding: 14px 26px;
+    border-width: 0;
 
 }
 
@@ -150,35 +164,44 @@ ul.right-menu li {
         display: none;
     }
 
-    .can {
-        left: 29px;
-        top: 341px;
-    }
+   .can-desktop {
+    display: none;
+   }
+
+   .can-tablet {
+    display: block;
+    position: absolute;
+    left: 29px;
+    top: 341px;
+   }
 
     .header-main {
-        background-color: aqua;
         position: relative;
     }
 
-    .header-main > .menu {
-        position: relative;
+    .logo-menu {
         display: flex;
-        padding-top: 42px;  
-        
-        /* justify-content: right; */
+        align-items: center;
+        justify-content: space-between;
     }
 
-    .header-main > ul.menu  {
+    .logo-menu > .menu {
+        position: relative; 
+    }
+
+    .logo-menu > ul.menu  {
+        margin-top: 28px;
+        display: flex;
         list-style-type: none;
     }
 
-    .header-main > ul.menu li:first-child {
+    .logo-menu > ul.menu li:first-child {
         margin-right: 33.5px;
         padding-bottom: 10px;
         border-bottom: 2px solid #68B738;
     }
     
-    .header-main > ul.menu li:nth-child(2) {
+    .logo-menu > ul.menu li:nth-child(2) {
         margin-right: 36px;
     }
 
@@ -192,17 +215,122 @@ ul.right-menu li {
     }
 
     .main-text {
-        background-color: blueviolet;
+        
+        padding-top: 62px;
+        padding-left: 10px;
+    }
+
+    .main-text > h1 {
+        margin-bottom: 41px;
+    }
+
+    .main-text > p {
+        margin-bottom: 49px;
     }
 
     .logo {
-        background-color: red;
         padding-top: 24px;
-        /* margin-right: 94.5px; */
+        margin-right: 94.5px;
+        padding-left: 30px;
     }
 
 }
 
 
 
+@media screen and (max-width: 320px) {
 
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .can-tablet {
+        display: none;
+    }
+
+    .can-mobile {
+        /* position: absolute; */
+        left: 20px;
+        top: 431px;
+        z-index: 5;
+    }
+
+    .logo-menu > ul.menu {
+        display: none;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .logo-mobile {
+        align-items: center;
+        position: relative;
+        width: 100%;
+        display: flex;
+        padding-top: 11px;
+        margin-bottom: 44.39px;
+    }
+
+    .logo-mobile > img:first-child {
+        margin-right: 56.68px;
+    }
+
+    .logo-mobile > img:nth-child(2) {
+        margin-right: 65px;
+    }
+
+    .main-text {
+        background-image: url(../img/index-background-desktop\ 1.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        z-index: 0;
+        position: absolute;
+        height: 302px;
+        width: 100%;
+        
+        /* padding-bottom: 33px; */
+        }
+
+    .main-text::after{ 
+        content: '';
+        background: rgba(104, 183, 56, 0.85);
+        width: 100%;
+        height: 302px;
+        display: block;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+    }
+
+    .main-text > h1 {
+        color:#FFFFFF;
+        font-size: 36px;
+        line-height: 36px;
+        margin-bottom: 25px;
+        text-align: center;
+        position: relative;
+        z-index: 4;
+    }
+
+    .main-text > p {
+        text-align: center;
+        font-size: 14px;
+        line-height: 14px;
+        color: #FFFFFF;
+        position: relative;
+        z-index: 4;
+    }
+
+    .main-text > button {
+        font-size: 14px;
+        line-height: 18px;
+        display: block;
+        margin: 0 auto;
+    }
+
+    
+}
